<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="title_movies">Movies</string>
    <string name="title_shows">TV Shows</string>
    <string name="title_movie_details">Movie Details</string>
    <string name="title_show_details">TV Show Details</string>
    <string name="title_favorites">Favorites</string>

    <string name="format_catalogue_year">(%1$s)</string>

    <string name="header_plot">Summary</string>
    <string name="header_casts">Casts</string>
    <string name="header_director">Director</string>
    <string name="header_writer">Writer</string>
    <string name="header_actors">Actors</string>
    <string name="header_awards">Awards</string>

    <string name="cd_logo">Logo</string>
    <string name="cd_poster">Movie poster</string>

    <string name="text_movies_empty">No Movies Here…</string>
    <string name="text_shows_empty">No Shows Here…</string>

    <string name="menu_favorites">Favorites</string>

</resources>
